configure deleteBill swagger
