# models/Bill.go
@@ -1,7 +1,6 @@
 package models
 
 import (
-	"gorm.io/gorm"
 	"time"
 )
 
@@ -10,11 +9,11 @@ type Bill struct {
 	// has many BillData
 	BillData []BillData `gorm:"foreignkey:BillId"`
 	// belongs to a BillOwner
-	BillOwnerId int64          `gorm:"type:int;not null"`
-	BillOwner   BillOwner      `gorm:"foreignKey:BillOwnerId"`
-	Name        string         `gorm:"type:varchar(50)"`
-	RawImage    string         `gorm:"type:varchar(50)"`
-	CreatedAt   time.Time      `gorm:"type:timestamp"`
-	UpdatedAt   time.Time      `gorm:"type:timestamp"`
-	DeletedAt   gorm.DeletedAt `gorm:"type:timestamp"`
+	BillOwnerId int64     `gorm:"type:int;not null"`
+	BillOwner   BillOwner `gorm:"foreignKey:BillOwnerId"`
+	Name        string    `gorm:"type:varchar(50)"`
+	RawImage    string    `gorm:"type:varchar(50)"`
+	CreatedAt   time.Time `gorm:"type:timestamp"`
+	UpdatedAt   time.Time `gorm:"type:timestamp"`
+	DeletedAt   time.Time `gorm:"type:timestamp"`
 }
